we can pass them and banner message

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -13,11 +13,11 @@
 	}
 
 	a {
-		text-decoration: none;
-		color: @color-linkColor;
+		text-decoration: underline;
 		cursor: pointer;
+	  color: inherit;
 		&:hover {
-			color: @color-linkColorHover;
+			color: black;
 		}
 	}
 
