--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -23,6 +23,7 @@
 	margin-top: -80px;
 	padding: 15px 20px;
 	overflow: auto;
+	height: inherit;
   }
 
   &.hidden {
@@ -48,6 +49,7 @@
 
 		@media @smartphone {
 		  font-size: 12px;
+		  width: 100%;
 		}
 
 		.title {
