added deploy script and some minor css fixes

--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -10,7 +10,7 @@
   bottom: 0;
   z-index: 99999;
 
-  color: @color-textLight;
+  color: @color-text;
   background: white;
   font-size: 16px;
   max-height: 100%;
@@ -140,6 +140,7 @@
 		  border: 1px solid @color-primary;
 		  padding: 0 15px;
 		  flex: 1 0 40%;
+		  text-transform: uppercase;
 
 		  @media @smartphone {
 			top: auto;
